--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 }
 html, body{
 	font-family:serif, sans-serif; 
-	background-color:dimgray;
+	background-color: gray;
 	margin: 1%;
 	
 }
@@ -25,6 +25,7 @@ html, body{
 
 
 .masthead {
+	height: 7em;
 	display: block;
 	color: white;
 	background-image: url(http://lorempixel.com/600/400/cats/);
@@ -33,15 +34,16 @@ html, body{
 	text-align: center;
 	padding: 2%;
 	text-align: center;
+	text-shadow: 1px 1px 2px black, 0 0 25px cyan, 0 0 5px cyan;
 	
 }
 
 .mainnav {
-
-	font-weight: bolder;
+    font-weight: bolder;
 	margin-top: 3%;
 	margin-bottom: 3%;
 	text-align: center;
+	box-shadow: 2px 1px 1px; black;
 	
 	
 	
@@ -50,22 +52,23 @@ html, body{
 
 
 nav a, nav a:link {
-color:whitesmoke;
-font-weight: bold;
+color:#FFF;
+font-weight: bolder;
 text-decoration: none;	
 display: block;
+line-height: 25px;
 	
 	
 
 }
 nav a:hover {
 	text-decoration: none;
-    background-color: burlywood;
+    background-color:darkcyan;
     
 }
 nav ul{
 	display: block; 
-	background: #C4C6CC;
+	background: lightblue;
 	list-style-type: none;
 	padding: 0;
 	
@@ -77,7 +80,8 @@ display:block;
 
 .content {
 
-	background-color: #C4C6CC;
+	background-color: lightblue;
+	box-shadow:  2px 1px 1px; black;
 }
 
 .content .primary {
@@ -95,8 +99,9 @@ display:block;
 
 .side{
 	margin: 3% auto;
-	background-color: #C4C6CC;
+	background-color: lightblue;
 	padding:1%;
+	box-shadow:  2px 2px 2px; black;
 	
 	
 }
@@ -107,9 +112,10 @@ display:block;
 
 .footer {
 	padding: 1%;
-	margin-bottom: 3%;
+	margin-bottom: 1%;
 	font-style: italic;
 	background: #C4C6CC;
+	box-shadow:  2px 2px 2px; black;
 	
 }
 }
@@ -124,32 +130,36 @@ display:block;
     box-sizing: border-box;
 }
 	body, html {
-	margin:0px 5px;
+	margin:2px;
 	padding:0;
 }
 
 .wrapper {
 	width: 100%;
 	height: 100%;
-	background-color: coral;
+	background-color:lightblue;
 	
 }
 
 	.masthead {
-		height:5em;
-		margin-bottom: 1%;
-		color:#4CFFCB;
+		height: 8em;
+	    margin-bottom: 1%;
+		color:#F5F7FF;
 		display: block;
-		background-image: url("http://lorempixel.com/600/400/cats/");
+		background-image: url("http://lorempixel.com/1000/400/cats/");
 		background-repeat: no-repeat;
 		background-size: cover;
+		background-position: center;
+		text-align: center;
+		text-shadow: 1px 1px 2px black, 0 0 25px cyan, 0 0 5px cyan;
+		
+		
 		
 
 	}
 	.masthead h1{
-		font-size: 2em;
-		text-align: center;
-		padding-top: 12px;
+		font-size: 2.5em;
+		padding-top: 30px;
 		
 		
 	}
@@ -157,14 +167,14 @@ display:block;
 	.mainnav {
 		padding:0;
 		list-style:none;
-		background-color: darkgray;
+		background-color: grey;
 		height:32px;
+		box-shadow: 1px 1px 1px; black;
 	
 		
 	}
 	
 	.mainnav li{
-		/*float: left;*/
 		display:inline-block;
 		width: 22%;
         margin:0;
@@ -180,9 +190,7 @@ display:block;
 		
 		
 		text-decoration: none;
-		color: white;
-		/*padding-top:10px;
-		padding-bottom: 10px;*/
+		color: #F5F7FF;
 		font-weight:900;
 		display: block;
 		padding-top: 5px;
@@ -192,9 +200,8 @@ display:block;
 		
 	}
 	 .mainnav a:hover{
-	    color: crimson;
-		 background-color: #000;
-		 height:2em;
+	  background-color:darkgrey; 
+	  height:2em;
 		 
 	}
 		
@@ -203,11 +210,11 @@ display:block;
 	   width:62%;
 	   float: left;
 	   margin-top: 1%;
-		box-shadow:2px 2px 2px gold;
-		margin-bottom: 1%;
-		margin-right: 1%;
-		background-color: darkgrey;
-		padding: 20px;
+	   margin-bottom: 1%;
+	   margin-right: 1%;
+	   background-color: darkgrey;
+	   padding: 15px;
+	   box-shadow: 1px 1px 1px; black;
 	}
 	
 	.content img{
@@ -230,6 +237,7 @@ display:block;
 		box-shadow:2px 2px 2px gold;
 		margin-bottom: 1%;
 		background-color: darkgrey;
+		box-shadow: 1px 1px 1px; black;
 
 	}
 	
@@ -248,6 +256,7 @@ display:block;
 		margin-bottom: 1%;
 		background-color:darkgray;
 		padding: 1%;
+		box-shadow: 1px 1px 1px; black;
 		
 	}
 
@@ -276,16 +285,19 @@ display:block;
 	
 	
    .masthead { height: 150px;
-	background-image: url("http://lorempixel.com/1600/400/cats/");
+	background-image: url("http://lorempixel.com/1200/400/cats/");
 	background-position: center;
 	background-size: cover;
 	margin-bottom: 1%;
 	text-align: center;
+	
 	   
 	}
 	.masthead h1{
 	padding-top: 20px;
 	font-size: 3em;
+	color:#F9FFF5;
+	text-shadow: 1px 1px 2px black, 0 0 25px cyan, 0 0 5px cyan;
 	}
 
 	
@@ -294,9 +306,9 @@ display:block;
 	font-weight: bolder;
 	margin-left: 1%;	
 	float: left;
-	background-color: firebrick;
 	width: 19%;
 	text-align: center;
+	box-shadow: 1px 1px 1px; black;
 	
 	
 }
@@ -304,9 +316,9 @@ display:block;
 
 
 nav a, nav a:link {
-color:whitesmoke;
+color: whitesmoke;
 font-weight: bold;
-	padding: 10px;
+padding: 10px;
 text-decoration: none;	
 display: block;
 	
@@ -315,12 +327,13 @@ display: block;
 }
 nav a:hover {
 	text-decoration: none;
-    background-color: burlywood;
+    background-color: azure;
+	color: cadetblue;
     
 }
 nav ul{
 	
-	background: #C4C6CC;
+	background: #7C7F7A;
 	list-style-type: none;
 	padding: 0;
 	
@@ -340,6 +353,7 @@ display:block;
 		-webkit-column-count: 2;
      -moz-column-count: 2;
           column-count: 2;
+		box-shadow: 1px 1px 1px; black;
 	}	
 	
 	.content img{
@@ -353,8 +367,8 @@ display:block;
 		margin-bottom: 1%;
 		width: 28%;
 		padding: 10px;
-		
 		background-color: azure;
+		box-shadow: 1px 1px 1px; black;
 		
 	}
 	
@@ -365,11 +379,12 @@ display:block;
 
 	.footer 	{
 	height: 100px;
-	background: darkgray;
+	background: gray;
 	padding-left: 5px;
 	font-size: 20px;
-		padding: 10px 10px;
-	
+	padding: 10px 10px;
+	margin-bottom:10px;
+	box-shadow:0 1px 1px; black;
 	clear: both;}	
 	
 	
