--- a/css/main.css
+++ b/css/main.css
@@ -1,394 +1,371 @@
-@media all and (max-width:35em){ 
-	@charset "utf-8";
+@charset  "utf-8";
 
-*
-{
+@media all and (max-width:35em) {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-html, body{
-	font-family:serif, sans-serif; 
-	background-color: gray;
-	margin: 1%;
-	
+
+html,body {
+    font-family: 'Open Sans', sans-serif;
+    background-color: gray;
+    margin: 1%;
 }
-
-
 
 .wrapper {
-	width: 100%;
-	margin:0,auto;
-	background-color: gray;
-	
+    width: 100%;
+    margin: 0,auto;
+    background-color: gray;
 }
 
-
 .masthead {
-	height: 7em;
-	display: block;
-	color: white;
-	background-image: url(http://lorempixel.com/600/400/cats/);
-	background-size: cover;
-	background-position: center;
-	text-align: center;
-	padding: 2%;
-	text-align: center;
-	text-shadow: 1px 1px 2px black, 0 0 25px cyan, 0 0 5px cyan;
-	
+    height: 7em;
+    display: block;
+    color: #fff;
+    background-image: url(http://lorempixel.com/600/400/cats/);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    padding: 2%;
+    text-align: center;
+    text-shadow: 1px 1px 2px black,0 0 25px cyan,0 0 5px #0ff;
 }
 
 .mainnav {
     font-weight: bolder;
-	margin-top: 3%;
-	margin-bottom: 3%;
-	text-align: center;
-	box-shadow: 2px 1px 1px; black;
-	
-	
-	
+    margin-top: 3%;
+    margin-bottom: 3%;
+    text-align: center;
+    box-shadow: 2px 1px 1px;
 }
 
-
-
-nav a, nav a:link {
-color:#FFF;
-font-weight: bolder;
-text-decoration: none;	
-display: block;
-line-height: 25px;
-	
-	
-
+nav a,nav a:link {
+    color: #FFF;
+    font-weight: bolder;
+    text-decoration: none;
+    display: block;
+    line-height: 25px;
 }
+
 nav a:hover {
-	text-decoration: none;
-    background-color:darkcyan;
-    
-}
-nav ul{
-	display: block; 
-	background: lightblue;
-	list-style-type: none;
-	padding: 0;
-	
-}
-nav li{
-display:block;
+    text-decoration: none;
+    background-color: #008b8b;
 }
 
+nav ul {
+    display: block;
+    background: #add8e6;
+    list-style-type: none;
+    padding: 0;
+}
+
+nav li {
+    display: block;
+}
 
 .content {
-
-	background-color: lightblue;
-	box-shadow:  2px 1px 1px; black;
+    background-color: #add8e6;
+    box-shadow: 2px 1px 1px;
 }
 
 .content .primary {
-	padding: 1%;
-	}
-
-.content .primary p { padding-bottom: 1%; padding-top: 1%;}
-  .content .primary p .left { width: 100%; padding-bottom: 1%;
-
+    padding: 1%;
 }
 
-.content .primary p .right {width: 100%; padding-bottom: 1%;}
-.primary h2 { padding-bottom: 1%;}
-
-
-.side{
-	margin: 3% auto;
-	background-color: lightblue;
-	padding:1%;
-	box-shadow:  2px 2px 2px; black;
-	
-	
+.content .primary p {
+    padding-bottom: 1%;
+    padding-top: 1%;
 }
 
-.side p { padding-bottom: 1%; padding-top: 1%;}
-.side p .right {width: 100%; padding-bottom: 1%; padding-top: 1%;}
-.side h2 { padding-bottom: 1%;}
+.content .primary p .left {
+    width: 100%;
+    padding-bottom: 1%;
+}
+
+.content .primary p .right {
+    width: 100%;
+    padding-bottom: 1%;
+}
+
+.primary h2 {
+    padding-bottom: 1%;
+}
+
+.side {
+    margin: 3% auto;
+    background-color: #add8e6;
+    padding: 1%;
+    box-shadow: 2px 2px 2px;
+}
+
+.side p {
+    padding-bottom: 1%;
+    padding-top: 1%;
+}
+
+.side p .right {
+    width: 100%;
+    padding-bottom: 1%;
+    padding-top: 1%;
+}
+
+.side h2 {
+    padding-bottom: 1%;
+}
 
 .footer {
-	padding: 1%;
-	margin-bottom: 1%;
-	font-style: italic;
-	background: #C4C6CC;
-	box-shadow:  2px 2px 2px; black;
-	
+    padding: 1%;
+    margin-bottom: 1%;
+    font-style: italic;
+    background: #C4C6CC;
+    box-shadow: 2px 2px 2px;
 }
 }
-/*--------------------------------------------------------------------------------------------------------------------------*/
 
-@media all and (min-width: 35em) and (max-width: 60em){
-	@charset "utf-8";
-	*
-{
+/*--------------------------------------------------------------------------------------------------------------------------*/
+@media all and (min-width: 35em) and (max-width: 60em) {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-	body, html {
-	margin:2px;
-	padding:0;
+
+body,html {
+    margin: 2px;
+    padding: 0;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .wrapper {
-	width: 100%;
-	height: 100%;
-	background-color:lightblue;
-	
+    width: 100%;
+    height: 100%;
+    background-color: #add8e6;
 }
 
-	.masthead {
-		height: 8em;
-	    margin-bottom: 1%;
-		color:#F5F7FF;
-		display: block;
-		background-image: url("http://lorempixel.com/1000/400/cats/");
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: center;
-		text-align: center;
-		text-shadow: 1px 1px 2px black, 0 0 25px cyan, 0 0 5px cyan;
-		
-		
-		
-
-	}
-	.masthead h1{
-		font-size: 2.5em;
-		padding-top: 30px;
-		
-		
-	}
-	
-	.mainnav {
-		padding:0;
-		list-style:none;
-		background-color: grey;
-		height:32px;
-		box-shadow: 1px 1px 1px; black;
-	
-		
-	}
-	
-	.mainnav li{
-		display:inline-block;
-		width: 22%;
-        margin:0;
-		text-align: center;
-		
-		
-		
-	}
-	
-	
-	
-	.mainnav li a{
-		
-		
-		text-decoration: none;
-		color: #F5F7FF;
-		font-weight:900;
-		display: block;
-		padding-top: 5px;
-		
-		
-		
-		
-	}
-	 .mainnav a:hover{
-	  background-color:darkgrey; 
-	  height:2em;
-		 
-	}
-		
-
-	.content{	   
-	   width:62%;
-	   float: left;
-	   margin-top: 1%;
-	   margin-bottom: 1%;
-	   margin-right: 1%;
-	   background-color: darkgrey;
-	   padding: 15px;
-	   box-shadow: 1px 1px 1px; black;
-	}
-	
-	.content img{
-		width: 100%;
-		
-	}
-	
-	.content .primary p .right{
-		padding-top: 4px;
-		padding-bottom: 2px;
-	}
-	.primary h2 { padding-bottom: 5%;}
-	
-
-
-	.side{
-		margin-top: 1%;
-		float: right;
-		width: 37%;
-		box-shadow:2px 2px 2px gold;
-		margin-bottom: 1%;
-		background-color: darkgrey;
-		box-shadow: 1px 1px 1px; black;
-
-	}
-	
-	.side img{
-		width: 100%;
-	}
-	.side{
-		padding: 1%;}
-	.side h3 { padding-bottom: 5%;}
-	
-
-	.footer{
-		clear:both;
-		display: block;
-		margin-top: 1%;
-		margin-bottom: 1%;
-		background-color:darkgray;
-		padding: 1%;
-		box-shadow: 1px 1px 1px; black;
-		
-	}
-
+.masthead {
+    height: 8em;
+    margin-bottom: 1%;
+    color: #F5F7FF;
+    display: block;
+    background-image: url(http://lorempixel.com/1000/400/cats/);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    text-shadow: 1px 1px 2px black,0 0 25px cyan,0 0 5px #0ff;
 }
 
-/*--------------------------------------------------------------------Edited from here-------------------------------------------------------------------------*/
+.masthead h1 {
+    font-size: 2.5em;
+    padding-top: 30px;
+}
+
+.mainnav {
+    padding: 0;
+    list-style: none;
+    background-color: grey;
+    height: 32px;
+    box-shadow: 1px 1px 1px;
+}
+
+.mainnav li {
+    display: inline-block;
+    width: 22%;
+    margin: 0;
+    text-align: center;
+}
+
+.mainnav li a {
+    text-decoration: none;
+    color: #F5F7FF;
+    font-weight: 900;
+    display: block;
+    padding-top: 5px;
+}
+
+.mainnav a:hover {
+    background-color: darkgrey;
+    height: 2em;
+}
+
+.content {
+    width: 62%;
+    float: left;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 1%;
+    background-color: darkgrey;
+    padding: 15px;
+    box-shadow: 1px 1px 1px;
+}
+
+.content img {
+    width: 100%;
+}
+
+.content .primary p .right {
+    padding-top: 4px;
+    padding-bottom: 2px;
+}
+
+.primary h2 {
+    padding-bottom: 5%;
+}
+
+.side {
+    margin-top: 1%;
+    float: right;
+    width: 37%;
+    box-shadow: 2px 2px 2px #ffd700;
+    margin-bottom: 1%;
+    background-color: darkgrey;
+    box-shadow: 1px 1px 1px;
+}
+
+.side img {
+    width: 100%;
+}
+
+.side {
+    padding: 1%;
+}
+
+.side h3 {
+    padding-bottom: 5%;
+}
+
+.footer {
+    clear: both;
+    display: block;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    background-color: #a9a9a9;
+    padding: 1%;
+    box-shadow: 1px 1px 1px;
+}
+}
+
+/*--------------------------------------------------------------------Edited from here-----------------------------------------*/
 @media all and (min-width: 60em){
 	@charset "utf-8";
 	
-	*
-{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
-	.wrapper {
-		width: 100%;
-		margin:  0 auto;
-		padding: 0;
-		background-color: aquamarine;
-		
-		
-	}	
-	
-	
-	
-   .masthead { height: 150px;
-	background-image: url("http://lorempixel.com/1200/400/cats/");
-	background-position: center;
-	background-size: cover;
-	margin-bottom: 1%;
-	text-align: center;
-	
-	   
-	}
-	.masthead h1{
-	padding-top: 20px;
-	font-size: 3em;
-	color:#F9FFF5;
-	text-shadow: 1px 1px 2px black, 0 0 25px cyan, 0 0 5px cyan;
-	}
-
-	
-.mainnav {
-
-	font-weight: bolder;
-	margin-left: 1%;	
-	float: left;
-	width: 19%;
-	text-align: center;
-	box-shadow: 1px 1px 1px; black;
-	
-	
+	html,body {
+    font-family: 'Open Sans', sans-serif;
 }
-
-
-
-nav a, nav a:link {
-color: whitesmoke;
-font-weight: bold;
-padding: 10px;
-text-decoration: none;	
-display: block;
-	
-	
-
-}
-nav a:hover {
-	text-decoration: none;
-    background-color: azure;
-	color: cadetblue;
     
-}
-nav ul{
+   
+
+.wrapper {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #7fffd4;
 	
-	background: #7C7F7A;
-	list-style-type: none;
-	padding: 0;
 	
-}
-nav li{
-display:block;
 }
 
+.masthead {
+    height: 150px;
+    background-image: url(http://lorempixel.com/1200/400/cats/);
+    background-position: center;
+    background-size: cover;
+    margin-bottom: 1%;
+    text-align: center;
+}
 
-	.content {
-		float: left;
-		margin-left: 1%;
-		width: 49%;
-		background-color: azure;
-		margin-bottom: 1%;
-		padding: 10px;
-		-webkit-column-count: 2;
-     -moz-column-count: 2;
-          column-count: 2;
-		box-shadow: 1px 1px 1px; black;
-	}	
-	
-	.content img{
-		width: 100%; 
-	padding: 5px;}	
-	
-	.side {
-		float: right;
-		margin-left: 1%;
-		margin-right: 1%;
-		margin-bottom: 1%;
-		width: 28%;
-		padding: 10px;
-		background-color: azure;
-		box-shadow: 1px 1px 1px; black;
-		
-	}
-	
-		.side img{
-		width: 100%;
-			padding: 5px;
-		}
+.masthead h1 {
+    padding-top: 20px;
+    font-size: 3em;
+    color: #F9FFF5;
+    text-shadow: 1px 1px 2px black,0 0 25px cyan,0 0 5px #0ff;
+}
 
-	.footer 	{
-	height: 100px;
-	background: gray;
-	padding-left: 5px;
-	font-size: 20px;
-	padding: 10px 10px;
-	margin-bottom:10px;
-	box-shadow:0 1px 1px; black;
-	clear: both;}	
-	
-	
-	
+.mainnav {
+    font-weight: bolder;
+    margin-left: 1%;
+    float: left;
+    width: 19%;
+    text-align: center;
+    box-shadow: 1px 1px 1px;
+	background: url(http://lorempixel.com/500/300/cats/) no-repeat center 95%;
+	padding-bottom: 15vw;
+	background-size: 99% auto;
+}
+
+nav a,nav a:link {
+    color: #f5f5f5;
+    font-weight: 700;
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+}
+
+nav a:hover {
+    text-decoration: none;
+    background-color: #f0ffff;
+    color: #5f9ea0;
+}
+
+nav ul {
+    background: #7C7F7A;
+    list-style-type: none;
+    padding: 0;
+}
+
+nav li {
+    display: block;
+}
+
+.content {
+    float: left;
+    margin-left: 1%;
+    width: 49%;
+    background-color: #f0ffff;
+    margin-bottom: 1%;
+    padding: 10px;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    box-shadow: 1px 1px 1px;
+}
+
+.content img {
+    width: 100%;
+    padding: 5px;
+}
+
+.side {
+    float: right;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 1%;
+    width: 28%;
+    padding: 10px;
+    background-color: #f0ffff;
+    box-shadow: 1px 1px 1px;
+}
+
+.side img {
+    width: 100%;
+    padding: 5px;
+}
+
+.footer {
+    height: 100px;
+    background: gray;
+    padding-left: 5px;
+    font-size: 20px;
+    padding: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0 1px 1px;
+    clear: both;
+}
 	
 	
 	
